[package]
name = "rbx-ds-cloud"
version = "0.1.0"
description = "CLI and Library for Roblox's Datastore Open Cloud API"
authors = ["RefinedDev"]
license = "MIT"
repository = "https://github.com/RefinedDev/rbx-ds-cloud"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.20"
clap = { version = "3.2.16", features = ["derive"] }
md-5 = "0.10.1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }

